- Travis: organization: "opensumware"

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
   - oraclejdk8
 addons:
   sonarcloud:
-    organization: "shiocms"
+    organization: "opensumware"
     token: ${SONAR_TOKEN}
 script:
   - ./gradlew check
